--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,390 @@
-/* You can add global styles to this file, and also import other style files */
+$font-stack: Helvetica, sans-serif
+$primary-color: #BC002D //ff3333
+$secondary-color: grey
+$tertiary-color: #d3d3d3
+$success-color: #32cf2d
+$primary-text-color: #000
+$link-text-color: $primary-text-color
+$background-color: white
+$underline-color: #d1d1d1
+
+$title-font: Arial
+$title-font-size: 24px
+
+$header-height: 120px
+$menu-height: 80px
+
+
+%title-text 
+    font-size: large
+    font-family: $title-font
+    color: $primary-text-color
+
+
+%center-content  
+    justify-content: center
+    align-items: center
+
+
+%center-item 
+    position: relative
+    margin: 0 auto
+
+
+//-----------------------------------------------------
+
+
+body 
+    font-family: Arial, Helvetica, sans-serif
+    justify-content: center
+    margin: 0 
+    padding: 0
+    box-sizing: border-box
+
+
+
+a, a:hover, a:active 
+    color: $link-text-color
+    text-decoration: none
+
+
+input 
+    border: none
+    border-bottom: 3px solid
+    border-color: $underline-color
+    width: 15vw
+    height: 30px
+    font-size: 20px
+    text-align: left
+
+
+input:focus, input:active 
+    outline: none !important
+
+.wrapper-header
+    position: fixed
+    top: 0
+    width: 100%
+    height: $header-height
+    background-color: $primary-color
+    z-index: 9990
+    padding-left: 20vw
+
+    p 
+        color: $background-color
+        margin-top: calc( ($header-height - $menu-height - 5px) / 2 )
+        font-size: $title-font-size
+        white-space: pre-line
+        width: 80vw
+        font-weight: bolder
+        z-index: 9991
+        span 
+            font-weight: lighter
+        
+    
+    .menu 
+        position: fixed
+        top: calc( $header-height - $menu-height )
+        left: 0
+        width: 100%
+        height: $menu-height
+        display: flex
+        align-items: center
+        list-style-type: none
+        padding: 0 20vw
+    
+
+    .menu-item 
+        margin-right: 20px
+        color: $background-color
+        cursor: pointer
+        transition: transform 0.3s ease-out
+
+    
+    a, a:link, a:active, a:focus 
+        margin-right: 20px
+        color: $background-color
+        cursor: pointer
+    
+
+    .menu-item .material-symbols-outlined 
+        font-size: 24px
+        margin-right: 5px
+        
+    
+    .menu-item:hover
+        transform: scale(1.2)
+        transition: transform 0.3s ease-out
+    
+
+
+.wrapper-container 
+    margin-top: $header-height 
+    padding-top: 15px 
+    padding-left: 20vw 
+    padding-right: 20vw 
+    max-width: 100% 
+    display: flex 
+    min-height: calc(100vh - 185px - 5vh) 
+    .content 
+        position: relative 
+        max-width: 800px 
+        width: 70vw 
+        margin: 0 auto 
+    .buttonSwatch  
+        position: relative 
+        display: flex 
+        width: 100% 
+        align-items: end 
+        justify-content: end 
+    div  
+        width: unset 
+ 
+    #chapter-overview 
+        font-size: 16px 
+        color: $secondary-color 
+        font-weight: bold 
+    .slider-container 
+        width: 300px 
+        margin: 50px auto 
+        .slider 
+            -webkit-appearance: none 
+            width: 100% 
+            height: 15px 
+            background: $tertiary-color 
+            outline: none 
+            opacity: 0.7 
+            transition: opacity 0.2s 
+    #kana-word 
+        font-size: 42px 
+        margin-top: 80px 
+        font-weight: 600 
+        position: relative 
+        z-index: 1 
+        transition: color 0.6s ease-in-out 
+    .tabcontent 
+        display: none 
+        padding: 6px 12px 
+        border: none 
+        border-top: none 
+        #hiragana-table, #katakana-table 
+            text-align: center 
+            border: none 
+            font-size: 20px 
+            font-weight: 400 
+            td
+                &:hover 
+                    transform: scale(1.2) 
+                    transition: transform 0.3s ease-out 
+  
+            .overview-header 
+                position: relative 
+                display: flex 
+                width: 100% 
+                min-height: 80px 
+                .number 
+                    text-align: left 
+                    width: 100% 
+        .wrapper-form 
+            position: absolute 
+            display: flex 
+            align-items: left 
+            justify-content: left 
+            #clientId 
+                width: 70% 
+                min-width: 70% 
+                max-width: 70% 
+                height: 100% 
+    .chapter 
+        margin-top: 30px 
+    .card
+        &:hover 
+            transform: scale(1.1, 1.1) 
+            z-index: 100 
+            .subtextRomanji 
+                filter: blur(0px) 
+.progress-bar 
+    top: 0 
+    bottom: 0 
+    right: 0 
+    left: 0 
+    background-color: $success-color 
+    overflow: auto 
+    z-index: 1000 
+    overflow: hidden 
+.progress-center 
+    margin: 0 auto 
+    width: 75% 
+.progress-right 
+    margin-left: 0 
+    margin-right: 0 
+    right: 0 
+.inline 
+    display: inline 
+    bottom: 0 
+    right: 0 
+    left: 0 
+    flex-grow: 1 
+.score-container 
+    display: flex 
+    .score-circle 
+        width: 5px 
+        height: 5px 
+        border-radius: 50% 
+        margin-right: 5px 
+        background-color: $background-color 
+        border: 1px solid $background-color 
+.score-circle-big 
+    width: 10px 
+    height: 10px 
+    border-radius: 50% 
+    margin-right: 5px 
+    background-color: $background-color 
+    border: 1px solid $background-color 
+.score-circle.filled, .score-circle-big.filled 
+    background-color: $success-color 
+    border: 1px solid $success-color 
+.slider 
+    &::-webkit-slider-thumb 
+        -webkit-appearance: none 
+        appearance: none 
+        width: 25px 
+        height: 25px 
+        background: $success-color 
+        cursor: pointer 
+    &::-moz-range-thumb 
+        width: 25px 
+        height: 25px 
+        background: $success-color 
+        cursor: pointer 
+#sliderValue 
+    display: block 
+    text-align: center 
+    margin-top: 10px 
+    font-size: 20px 
+#kana-word 
+    &:hover 
+        color: rgba(0,0,0,0) 
+        &::after 
+            color: $primary-text-color 
+    &::after 
+        content: attr(data-hover-text) 
+        position: absolute 
+        color: rgba(0,0,0,0) 
+        transition: color 0.6s ease-in-out 
+        z-index: 2 
+p, form, h1 
+    display: flex 
+#userInput 
+    width: 40vw 
+    height: 50px 
+    font-size: 20px 
+    text-align: center 
+    margin-top: 60px 
+.wrapper-table 
+    .tab-tab 
+        overflow: hidden 
+        background-color: #fff 
+        border-bottom: 0.5px #d1d1d1 solid 
+    .tab button 
+        background-color: inherit 
+        float: left 
+        border: none 
+        outline: none 
+        cursor: pointer 
+        padding: 14px 16px 
+        transition: 0.3s 
+.tab 
+    button 
+        &:hover 
+            border-bottom: 1px grey solid 
+        &.active 
+            border-bottom: 1px grey solid 
+#hiragana-table td, #katakana-table td 
+    min-width: 40px 
+    height: 30px 
+#hiragana-table td p, #katakana-table td p 
+    font-size: 10px 
+    padding: 0 
+    margin: 0 
+    color: grey 
+.row-header, .column-header, .cell-empty 
+    border: none 
+    font-size: 14px 
+table 
+    width: 100% 
+    height: 1px 
+    border-collapse: collapse 
+    th, td 
+        border: 0.5px solid white 
+        padding: 0px 
+        align-items: center 
+        height: inherit 
+        max-height: 1% 
+    div 
+        border: 0.5px solid #dddddd 
+        height: 100% 
+        width: 100% 
+        background-color: $background-color 
+.subtextRank 
+    display: flex 
+.accordion-item 
+    border: none 
+.accordion-header 
+    margin-bottom: 15px 
+    display: flex 
+.accordion-button 
+    &:not(.collapsed) 
+        background-color: unset 
+    p 
+        display: unset 
+        color: $primary-text-color 
+        padding-right: 15px 
+        padding-top: 15px 
+.grid-container 
+    max-width: 800px 
+    display: grid 
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)) 
+    gap: 20px 
+    .card 
+        position: relative 
+        background-color: white 
+        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1) 
+        padding: 20px 
+        transition: transform 0.3s ease 
+        max-width: 100% 
+        max-height: 100% 
+        height: 100% 
+        margin: 0 auto 
+        .subtextRomanji 
+            filter: blur(3px) 
+.input-container 
+    display: block 
+    position: relative 
+    width: 100% 
+    min-width: 100% 
+    max-width: 100% 
+    height: 30px 
+    font-size: 14px 
+.formElement 
+    position: relative 
+
+
+
+.wrapper-footer 
+    width: 100%
+    height: 80px
+    z-index: 9980
+    margin-top: auto
+    padding-top: 5vh
+ 
+    .footer 
+        color: grey
+        font-size: 12px
+        font-weight: bold
+        p 
+            display: flex
+            justify-content: center
+            align-items: center
+        
+    
