--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,19 +3,19 @@
     <p>ことば<span>の</span>せんせい</p>
     <ul class="menu">
       <li class="menu-item">
-        <a href="/dashboard"><span class="material-symbols-outlined">home</span></a>
+        <a href="#" (click)="changeRoute($event, '#kana')"><span class="material-symbols-outlined">home</span></a>
       </li>
       <li class="menu-item">
-        <a href="/vocab"><span class="material-symbols-outlined">school</span></a>
+        <a href="#" ><span class="material-symbols-outlined" >school</span></a>
       </li>
       <li class="menu-item">
-        <a href="/kana"> <span style="font-size:35px;"class="material-symbols-outlined">language_japanese_kana</span></a>
+        <a href="#"> <span style="font-size:35px;"class="material-symbols-outlined" >language_japanese_kana</span></a>
       </li>
       <li class="menu-item">
-        <a href="/progress"><span class="material-symbols-outlined">show_chart</span></a>
+        <a href="#" (click)="changeRoute($event, 'vocab')"><span class="material-symbols-outlined" >show_chart</span></a>
       </li>       
       <li class="menu-item">
-        <a href="/settings"> <span class="material-symbols-outlined">settings</span></a>
+        <a href="#" (click)="changeRoute($event, 'settings')"> <span class="material-symbols-outlined">settings</span></a>
       </li>
     </ul>
   </div>
@@ -23,6 +23,7 @@
 
   <div class="wrapper-container wrapper">
     
+    <router-outlet name='main'></router-outlet>
     <router-outlet></router-outlet>
 
   </div>
