edited changeRoute() function for navigation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,13 +3,13 @@
     <p>ことば<span>の</span>せんせい</p>
     <ul class="menu">
       <li class="menu-item">
-        <a href="#" (click)="changeRoute($event, '#kana')"><span class="material-symbols-outlined">home</span></a>
+        <a href="#" (click)="changeRoute($event, 'kana')"><span class="material-symbols-outlined">home</span></a>
       </li>
       <li class="menu-item">
-        <a href="#" ><span class="material-symbols-outlined" >school</span></a>
+        <a href="vocab" ><span class="material-symbols-outlined" >school</span></a>
       </li>
       <li class="menu-item">
-        <a href="#"> <span style="font-size:35px;"class="material-symbols-outlined" >language_japanese_kana</span></a>
+        <a href="kana"> <span style="font-size:35px;"class="material-symbols-outlined" >language_japanese_kana</span></a>
       </li>
       <li class="menu-item">
         <a href="#" (click)="changeRoute($event, 'vocab')"><span class="material-symbols-outlined" >show_chart</span></a>
