created vocabulary flashcard

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 <div class="wrapper-header wrapper">
-    <p>ことば<span>の</span>せんせい</p>
+    <p>ことば<span>∙の∙</span>せんせい</p>
     <ul class="menu">
       <li class="menu-item">
         <a href="#" (click)="navToComponent( $event, 'home')" ><span class="material-symbols-outlined">home</span></a>
