--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,38 +1,12 @@
-$font-stack: Helvetica, sans-serif
-$primary-color: #BC002D //ff3333
-$secondary-color: grey
-$tertiary-color: #d3d3d3
-$success-color: #32cf2d
-$primary-text-color: #000
-$link-text-color: $primary-text-color
-$background-color: white
-$underline-color: #d1d1d1
-
-$title-font: Arial
-$title-font-size: 24px
-
-$header-height: 120px
-$menu-height: 80px
-
-
-%title-text 
-    font-size: large
-    font-family: $title-font
-    color: $primary-text-color
-
-
-%center-content  
-    justify-content: center
-    align-items: center
-
-
-%center-item 
-    position: relative
-    margin: 0 auto
-
+@import "./assets/variables"
 
 //-----------------------------------------------------
 
+.msgCorrect
+    color: $success-color
+
+.msgIncorrect
+    color: $danger-color
 
 body 
     font-family: Arial, Helvetica, sans-serif
@@ -124,26 +98,16 @@ input:focus, input:active
     padding-left: 20vw 
     padding-right: 20vw 
     max-width: 100% 
-    display: flex 
     min-height: calc(100vh - 185px - 5vh) 
     .content 
         position: relative 
         max-width: 800px 
         width: 70vw 
         margin: 0 auto 
-    .buttonSwatch  
-        position: relative 
-        display: flex 
-        width: 100% 
-        align-items: end 
-        justify-content: end 
-    div  
-        width: unset 
+     
+    
  
-    #chapter-overview 
-        font-size: 16px 
-        color: $secondary-color 
-        font-weight: bold 
+    
     .slider-container 
         width: 300px 
         margin: 50px auto 
@@ -155,13 +119,6 @@ input:focus, input:active
             outline: none 
             opacity: 0.7 
             transition: opacity 0.2s 
-    #kana-word 
-        font-size: 42px 
-        margin-top: 80px 
-        font-weight: 600 
-        position: relative 
-        z-index: 1 
-        transition: color 0.6s ease-in-out 
     .tabcontent 
         display: none 
         padding: 6px 12px 
@@ -262,17 +219,8 @@ input:focus, input:active
     text-align: center 
     margin-top: 10px 
     font-size: 20px 
-#kana-word 
-    &:hover 
-        color: rgba(0,0,0,0) 
-        &::after 
-            color: $primary-text-color 
-    &::after 
-        content: attr(data-hover-text) 
-        position: absolute 
-        color: rgba(0,0,0,0) 
-        transition: color 0.6s ease-in-out 
-        z-index: 2 
+
+
 p, form, h1 
     display: flex 
 #userInput 
@@ -326,8 +274,7 @@ table
         height: 100% 
         width: 100% 
         background-color: $background-color 
-.subtextRank 
-    display: flex 
+
 .accordion-item 
     border: none 
 .accordion-header 
