--- a/frontend/src/styles.sass
+++ b/frontend/src/styles.sass
@@ -90,7 +90,51 @@ input:focus, input:active
         transform: scale(1.2)
         transition: transform 0.3s ease-out
     
+    .login-container
+        top: 30px
+        display: grid 
+        grid-template-columns: auto auto
+        position: fixed
+        right: 20vw
+        
+        form
+            display: grid
+            justify-items: center
+            align-items: center
 
+            input::placeholder 
+                opacity: 1
+                font-weight: bold
+                color: white
+            input 
+                font-size: 14px
+                grid-column: 1 / 1
+                border-radius: 14px
+                border: 0.15em
+                border-color: rgba(255,255,255,1)
+                border-style: solid
+                padding: 5px 12px 5px
+                text-align: left
+                font-weight: bold
+                color: white
+                height: 30px
+                margin-bottom: 5px
+                background-color: $primary-color
+                min-width: 10vw
+                max-width: 10vw
+                
+        span
+            color: white
+        button
+            grid-column: 2 / 3 
+            grid-row: 1 / 3
+            margin-left: 10px
+            background-color: rgba(255,255,255,1)
+            border-color: rgba(255,255,255,1)
+            border-style: solid
+            border-radius: 14px
+            font-weight: bolder
+            color: $primary-color
 
 .wrapper-container 
     margin-top: $header-height 
