--- a/frontend/src/app/routes/progress/progress.component.html
+++ b/frontend/src/app/routes/progress/progress.component.html
@@ -2,7 +2,7 @@
 
 <h1>Vokabelliste</h1>
   
-<div *ngFor="let group of sortAndGroupUserData">
+<div *ngFor="let group of vocabData">
     <div class="overview-header chapter">
       <div class="number">
         <div class="accordion" [attr.id]="'accordionC' + group.chapter ">
